--- a/client/src/pages/EventPage/EventPage.module.scss
+++ b/client/src/pages/EventPage/EventPage.module.scss
@@ -38,7 +38,7 @@
   width: 70%;
   display: flex;
   flex-direction: column;
-  row-gap: 25px;
+  row-gap: 30px;
 
   color: $black-color;
 }
@@ -46,7 +46,7 @@
 .titleWrapper {
   display: flex;
   flex-direction: column;
-  row-gap: 12px;
+  row-gap: 15px;
 }
 
 .detailsWrapper {
@@ -69,6 +69,10 @@
   font-size: 13px;
   line-height: 17px;
   color: $black-color;
+
+  & * {
+    margin-bottom: 10px;
+  }
 }
 
 
@@ -122,4 +126,10 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 30px;
   grid-row-gap: 30px;
+}
+
+.link {
+  color: $blue-color;
+  text-decoration: underline;
+  font-size: 13px;
 }
